[lab3] update type errors
