# docs/swagger.yaml
@@ -70,14 +70,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.PromosDocs'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/promos.PromoError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/promos.PromoError'
         "500":
           description: Internal Server Error
           schema:
@@ -127,10 +119,6 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/promos.PromoError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/promos.PromoError'
         "500":
           description: Internal Server Error
           schema:
@@ -155,10 +143,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/promos.PromoDeleted'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/promos.PromoError'
         "404":
           description: Not Found
           schema:
@@ -186,6 +170,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/promos.PromoPrice'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/promos.PromoError'
         "500":
           description: Internal Server Error
           schema:
@@ -248,10 +236,6 @@ paths:
             $ref: '#/definitions/promos.PromoCreated'
         "400":
           description: Bad Request
-          schema:
-            $ref: '#/definitions/promos.PromoError'
-        "404":
-          description: Not Found
           schema:
             $ref: '#/definitions/promos.PromoError'
         "500":
